--- a/public/css/app.css
+++ b/public/css/app.css
@@ -805,12 +805,17 @@ video {
 	grid-column: span 6 / span 6;
 }.col-span-12{
 	grid-column: span 12 / span 12;
+}.m-1{
+	margin: 0.25rem;
 }.mx-auto{
 	margin-left: auto;
 	margin-right: auto;
 }.my-5{
 	margin-top: 1.25rem;
 	margin-bottom: 1.25rem;
+}.my-10{
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
 }.ml-3{
 	margin-left: 0.75rem;
 }.-ml-px{
@@ -931,6 +936,8 @@ video {
 	width: 2.5rem;
 }.w-20{
 	width: 5rem;
+}.w-2{
+	width: 0.5rem;
 }.min-w-0{
 	min-width: 0px;
 }.max-w-screen-xl{
@@ -977,6 +984,10 @@ video {
 	list-style-position: inside;
 }.list-disc{
 	list-style-type: disc;
+}.appearance-none{
+	-webkit-appearance: none;
+	   -moz-appearance: none;
+	        appearance: none;
 }.grid-cols-6{
 	grid-template-columns: repeat(6, minmax(0, 1fr));
 }.grid-cols-1{
@@ -1059,6 +1070,8 @@ video {
 	border-width: 1px;
 }.border-2{
 	border-width: 2px;
+}.border-0{
+	border-width: 0px;
 }.border-b-2{
 	border-bottom-width: 2px;
 }.border-l-4{
@@ -1069,6 +1082,8 @@ video {
 	border-bottom-width: 1px;
 }.border-r{
 	border-right-width: 1px;
+}.border-none{
+	border-style: none;
 }.border-gray-300{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1089,6 +1104,9 @@ video {
 }.border-white{
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}.border-primary{
+	--tw-border-opacity: 1;
+	border-color: rgba(20, 33, 61, var(--tw-border-opacity));
 }.bg-white{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1131,6 +1149,14 @@ video {
 }.bg-green{
 	--tw-bg-opacity: 1;
 	background-color: rgba(12, 174, 116, var(--tw-bg-opacity));
+}.bg-action{
+	--tw-bg-opacity: 1;
+	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
+}.bg-transparent{
+	background-color: transparent;
+}.bg-dark{
+	--tw-bg-opacity: 1;
+	background-color: rgba(61, 64, 91, var(--tw-bg-opacity));
 }.bg-opacity-25{
 	--tw-bg-opacity: 0.25;
 }.bg-cover{
@@ -1321,6 +1347,9 @@ video {
 }.text-gray-300{
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}.text-action{
+	--tw-text-opacity: 1;
+	color: rgba(173, 46, 36, var(--tw-text-opacity));
 }.underline{
 	text-decoration: underline;
 }.antialiased{
@@ -1896,6 +1925,8 @@ video {
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }.focus\:z-10:focus{
 	z-index: 10;
+}.focus\:border-none:focus{
+	border-style: none;
 }.focus\:border-blue-300:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(147, 197, 253, var(--tw-border-opacity));
@@ -2141,9 +2172,14 @@ video {
 	}.md\:text-2xl{
 		font-size: 1.5rem;
 		line-height: 2rem;
+	}.md\:text-sm{
+		font-size: 0.875rem;
+		line-height: 1.25rem;
 	}
 }@media (min-width: 1024px){.lg\:col-span-4{
 		grid-column: span 4 / span 4;
+	}.lg\:w-auto{
+		width: auto;
 	}.lg\:px-8{
 		padding-left: 2rem;
 		padding-right: 2rem;
