--- a/public/css/app.css
+++ b/public/css/app.css
@@ -803,6 +803,8 @@ video {
 	right: 0.25rem;
 }.top-14{
 	top: 3.5rem;
+}.top-1\/2{
+	top: 50%;
 }.z-0{
 	z-index: 0;
 }.z-50{
@@ -892,12 +894,16 @@ video {
 	margin-bottom: 0.5rem;
 }.mb-5{
 	margin-bottom: 1.25rem;
-}.mt-12{
-	margin-top: 3rem;
+}.-mt-3{
+	margin-top: -0.75rem;
 }.mb-3{
 	margin-bottom: 0.75rem;
+}.mt-12{
+	margin-top: 3rem;
 }.mb-1{
 	margin-bottom: 0.25rem;
+}.mt-0{
+	margin-top: 0px;
 }.block{
 	display: block;
 }.inline-block{
@@ -934,6 +940,8 @@ video {
 	height: 100%;
 }.h-11{
 	height: 2.75rem;
+}.h-40{
+	height: 10rem;
 }.min-h-screen{
 	min-height: 100vh;
 }.w-5{
@@ -980,6 +988,8 @@ video {
 	max-width: 72rem;
 }.max-w-400{
 	max-width: 400px;
+}.max-w-screen-sm{
+	max-width: 640px;
 }.flex-1{
 	flex: 1 1 0%;
 }.flex-shrink-0{
@@ -1018,6 +1028,11 @@ video {
 	cursor: default;
 }.cursor-pointer{
 	cursor: pointer;
+}.select-none{
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
 }.list-inside{
 	list-style-position: inside;
 }.list-disc{
@@ -1076,6 +1091,10 @@ video {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
 	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}.space-y-4 > :not([hidden]) ~ :not([hidden]){
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }.self-center{
 	align-self: center;
 }.overflow-hidden{
@@ -1110,6 +1129,9 @@ video {
 }.rounded-b-none{
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px;
+}.rounded-t-lg{
+	border-top-left-radius: 0.5rem;
+	border-top-right-radius: 0.5rem;
 }.border{
 	border-width: 1px;
 }.border-2{
@@ -1196,12 +1218,12 @@ video {
 }.bg-blue-500{
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}.bg-action{
-	--tw-bg-opacity: 1;
-	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
 }.bg-black{
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}.bg-action{
+	--tw-bg-opacity: 1;
+	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
 }.bg-transparent{
 	background-color: transparent;
 }.bg-green{
@@ -1233,10 +1255,10 @@ video {
 	padding: 0.25rem;
 }.p-4{
 	padding: 1rem;
-}.p-3{
-	padding: 0.75rem;
 }.p-5{
 	padding: 1.25rem;
+}.p-3{
+	padding: 0.75rem;
 }.px-4{
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -1304,12 +1326,16 @@ video {
 	padding-bottom: 0.25rem;
 }.pt-8{
 	padding-top: 2rem;
-}.pb-2{
-	padding-bottom: 0.5rem;
 }.pt-10{
 	padding-top: 2.5rem;
+}.pb-2{
+	padding-bottom: 0.5rem;
 }.pr-3{
 	padding-right: 0.75rem;
+}.pl-4{
+	padding-left: 1rem;
+}.pl-10{
+	padding-left: 2.5rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -1352,6 +1378,8 @@ video {
 	font-weight: 300;
 }.font-bold{
 	font-weight: 700;
+}.font-thin{
+	font-weight: 100;
 }.uppercase{
 	text-transform: uppercase;
 }.leading-5{
@@ -1362,6 +1390,8 @@ video {
 	line-height: 1.25;
 }.leading-4{
 	line-height: 1rem;
+}.leading-relaxed{
+	line-height: 1.625;
 }.tracking-widest{
 	letter-spacing: 0.1em;
 }.tracking-wider{
@@ -1416,6 +1446,9 @@ video {
 }.text-action{
 	--tw-text-opacity: 1;
 	color: rgba(173, 46, 36, var(--tw-text-opacity));
+}.text-primary{
+	--tw-text-opacity: 1;
+	color: rgba(20, 33, 61, var(--tw-text-opacity));
 }.underline{
 	text-decoration: underline;
 }.antialiased{
@@ -1443,6 +1476,12 @@ video {
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.shadow-xl{
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.shadow-2xl{
+	--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.shadow-amit{
+	--tw-shadow: 0 1px 10px #ad2e24;
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.ring-1{
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1476,6 +1515,8 @@ video {
 	transition-duration: 75ms;
 }.duration-300{
 	transition-duration: 300ms;
+}.duration-500{
+	transition-duration: 500ms;
 }.ease-in-out{
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }.ease-out{
@@ -1526,6 +1567,23 @@ video {
   margin: 0 auto;
 }nav {
   border-bottom: 1px solid #fff6;
+}.web {
+  display: block;
+}.mobile {
+  display: none;
+}@media (max-width: 767px) {
+  .web {
+    display: none !important;
+  }
+  .mobile {
+    display: block !important;
+  }
+  .container {
+    width: 98%;
+    max-width: 98%;
+    padding-left: .5em;
+    padding-right: .5em;
+  }
 }/* Swiper CSS *//* Swiper CSS *//**
  * Swiper 5.4.2
  * Most modern mobile touch slider and framework with hardware accelerated transitions
@@ -1945,7 +2003,10 @@ video {
   content: url("/images/icons/next-right-white.svg");
 }.imgArrowsWhite .swiper-button-prev {
   content: url("/images/icons/next-left-white.svg");
-}/* Swiper CSS */.hover\:cursor-pointer:hover{
+}/* Swiper CSS */.hover\:-translate-y-1:hover{
+	--tw-translate-y: -0.25rem;
+	transform: var(--tw-transform);
+}.hover\:cursor-pointer:hover{
 	cursor: pointer;
 }.hover\:border-gray-300:hover{
 	--tw-border-opacity: 1;
@@ -1989,6 +2050,9 @@ video {
 }.hover\:bg-indigo-700:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}.hover\:bg-action:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover{
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2010,6 +2074,9 @@ video {
 }.hover\:text-black:hover{
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}.hover\:shadow-lg:hover{
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.focus\:z-10:focus{
 	z-index: 10;
 }.focus\:border-blue-300:focus{
@@ -2125,6 +2192,9 @@ video {
 }.group:hover .group-hover\:bg-white{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}.group:hover .group-hover\:text-action{
+	--tw-text-opacity: 1;
+	color: rgba(173, 46, 36, var(--tw-text-opacity));
 }.group:hover .group-hover\:text-primary{
 	--tw-text-opacity: 1;
 	color: rgba(20, 33, 61, var(--tw-text-opacity));
@@ -2157,6 +2227,8 @@ video {
 		margin-left: 0px;
 	}.sm\:block{
 		display: block;
+	}.sm\:inline-block{
+		display: inline-block;
 	}.sm\:flex{
 		display: flex;
 	}.sm\:hidden{
@@ -2227,12 +2299,17 @@ video {
 	}.sm\:px-20{
 		padding-left: 5rem;
 		padding-right: 5rem;
+	}.sm\:py-4{
+		padding-top: 1rem;
+		padding-bottom: 1rem;
 	}.sm\:pt-0{
 		padding-top: 0px;
 	}.sm\:pb-4{
 		padding-bottom: 1rem;
 	}.sm\:text-left{
 		text-align: left;
+	}.sm\:text-center{
+		text-align: center;
 	}.sm\:text-right{
 		text-align: right;
 	}.sm\:text-sm{
@@ -2245,10 +2322,10 @@ video {
 		grid-column: span 1 / span 1;
 	}.md\:col-span-10{
 		grid-column: span 10 / span 10;
-	}.md\:col-span-3{
-		grid-column: span 3 / span 3;
 	}.md\:col-span-4{
 		grid-column: span 4 / span 4;
+	}.md\:col-span-3{
+		grid-column: span 3 / span 3;
 	}.md\:col-span-6{
 		grid-column: span 6 / span 6;
 	}.md\:mt-0{
@@ -2279,6 +2356,8 @@ video {
 		border-top-width: 0px;
 	}.md\:border-l{
 		border-left-width: 1px;
+	}.md\:p-10{
+		padding: 2.5rem;
 	}.md\:px-5{
 		padding-left: 1.25rem;
 		padding-right: 1.25rem;
@@ -2289,6 +2368,9 @@ video {
 	}.md\:text-3xl{
 		font-size: 1.875rem;
 		line-height: 2.25rem;
+	}.md\:text-4xl{
+		font-size: 2.25rem;
+		line-height: 2.5rem;
 	}.md\:text-2xl{
 		font-size: 1.5rem;
 		line-height: 2rem;
@@ -2298,6 +2380,10 @@ video {
 	}
 }@media (min-width: 1024px){.lg\:col-span-4{
 		grid-column: span 4 / span 4;
+	}.lg\:col-span-9{
+		grid-column: span 9 / span 9;
+	}.lg\:flex{
+		display: flex;
 	}.lg\:w-auto{
 		width: auto;
 	}.lg\:px-8{
