--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2328,6 +2328,8 @@ video {
 		grid-column: span 4 / span 4;
 	}.md\:col-span-6{
 		grid-column: span 6 / span 6;
+	}.md\:col-span-8{
+		grid-column: span 8 / span 8;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:mb-0{
@@ -2382,6 +2384,10 @@ video {
 		grid-column: span 4 / span 4;
 	}.lg\:col-span-9{
 		grid-column: span 9 / span 9;
+	}.lg\:col-span-3{
+		grid-column: span 3 / span 3;
+	}.lg\:col-span-8{
+		grid-column: span 8 / span 8;
 	}.lg\:flex{
 		display: flex;
 	}.lg\:w-auto{
