--- a/public/css/app.css
+++ b/public/css/app.css
@@ -809,10 +809,10 @@ video {
 	z-index: 0;
 }.z-50{
 	z-index: 50;
-}.z-10{
-	z-index: 10;
 }.z-20{
 	z-index: 20;
+}.z-10{
+	z-index: 10;
 }.col-span-6{
 	grid-column: span 6 / span 6;
 }.col-span-12{
@@ -828,18 +828,21 @@ video {
 }.mx-auto{
 	margin-left: auto;
 	margin-right: auto;
-}.my-5{
-	margin-top: 1.25rem;
-	margin-bottom: 1.25rem;
-}.my-3{
-	margin-top: 0.75rem;
-	margin-bottom: 0.75rem;
 }.mx-2{
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
 }.my-10{
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
+}.my-5{
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
+}.my-3{
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}.mx-1{
+	margin-left: 0.25rem;
+	margin-right: 0.25rem;
 }.ml-3{
 	margin-left: 0.75rem;
 }.-ml-px{
@@ -886,16 +889,16 @@ video {
 	margin-left: 1.5rem;
 }.mb-4{
 	margin-bottom: 1rem;
+}.mb-10{
+	margin-bottom: 2.5rem;
+}.mb-2{
+	margin-bottom: 0.5rem;
 }.mb-5{
 	margin-bottom: 1.25rem;
 }.mt-0{
 	margin-top: 0px;
 }.-mt-px{
 	margin-top: -1px;
-}.mb-10{
-	margin-bottom: 2.5rem;
-}.mb-2{
-	margin-bottom: 0.5rem;
 }.-mt-3{
 	margin-top: -0.75rem;
 }.mb-3{
@@ -936,10 +939,10 @@ video {
 	height: 2.5rem;
 }.h-20{
 	height: 5rem;
-}.h-40{
-	height: 10rem;
 }.h-full{
 	height: 100%;
+}.h-40{
+	height: 10rem;
 }.h-11{
 	height: 2.75rem;
 }.min-h-screen{
@@ -1164,15 +1167,15 @@ video {
 }.border-gray-100{
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}.border-primary{
+	--tw-border-opacity: 1;
+	border-color: rgba(20, 33, 61, var(--tw-border-opacity));
 }.border-gray-400{
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }.border-action{
 	--tw-border-opacity: 1;
 	border-color: rgba(173, 46, 36, var(--tw-border-opacity));
-}.border-primary{
-	--tw-border-opacity: 1;
-	border-color: rgba(20, 33, 61, var(--tw-border-opacity));
 }.border-white{
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
@@ -1212,18 +1215,18 @@ video {
 }.bg-gray-200{
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}.bg-action{
-	--tw-bg-opacity: 1;
-	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
 }.bg-primary{
 	--tw-bg-opacity: 1;
 	background-color: rgba(20, 33, 61, var(--tw-bg-opacity));
-}.bg-blue-500{
-	--tw-bg-opacity: 1;
-	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }.bg-black{
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}.bg-action{
+	--tw-bg-opacity: 1;
+	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
+}.bg-blue-500{
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }.bg-transparent{
 	background-color: transparent;
 }.bg-green{
@@ -1251,10 +1254,10 @@ video {
 	padding: 0.5rem;
 }.p-6{
 	padding: 1.5rem;
-}.p-1{
-	padding: 0.25rem;
 }.p-4{
 	padding: 1rem;
+}.p-1{
+	padding: 0.25rem;
 }.p-5{
 	padding: 1.25rem;
 }.p-3{
@@ -1374,10 +1377,10 @@ video {
 	font-weight: 500;
 }.font-semibold{
 	font-weight: 600;
-}.font-thin{
-	font-weight: 100;
 }.font-bold{
 	font-weight: 700;
+}.font-thin{
+	font-weight: 100;
 }.font-light{
 	font-weight: 300;
 }.uppercase{
@@ -2011,12 +2014,12 @@ video {
 }.hover\:border-gray-300:hover{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}.hover\:border-blue-500:hover{
-	--tw-border-opacity: 1;
-	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
 }.hover\:border-indigo-500:hover{
 	--tw-border-opacity: 1;
 	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
+}.hover\:border-blue-500:hover{
+	--tw-border-opacity: 1;
+	border-color: rgba(59, 130, 246, var(--tw-border-opacity));
 }.hover\:border-action:hover{
 	--tw-border-opacity: 1;
 	border-color: rgba(173, 46, 36, var(--tw-border-opacity));
@@ -2038,21 +2041,21 @@ video {
 }.hover\:bg-gray-50:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}.hover\:bg-action:hover{
+}.hover\:bg-white:hover{
 	--tw-bg-opacity: 1;
-	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }.hover\:bg-indigo-700:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}.hover\:bg-action:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
 }.hover\:bg-blue-800:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(30, 64, 175, var(--tw-bg-opacity));
 }.hover\:bg-blue-700:hover{
 	--tw-bg-opacity: 1;
 	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
-}.hover\:bg-white:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover{
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -2068,12 +2071,12 @@ video {
 }.hover\:text-gray-900:hover{
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
-}.hover\:text-white:hover{
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }.hover\:text-black:hover{
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}.hover\:text-white:hover{
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }.hover\:shadow-lg:hover{
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2097,12 +2100,12 @@ video {
 }.focus\:border-gray-300:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}.focus\:border-indigo-500:focus{
-	--tw-border-opacity: 1;
-	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
 }.focus\:border-primary:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(20, 33, 61, var(--tw-border-opacity));
+}.focus\:border-indigo-500:focus{
+	--tw-border-opacity: 1;
+	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
 }.focus\:border-action:focus{
 	--tw-border-opacity: 1;
 	border-color: rgba(173, 46, 36, var(--tw-border-opacity));
@@ -2328,8 +2331,6 @@ video {
 		grid-column: span 4 / span 4;
 	}.md\:col-span-6{
 		grid-column: span 6 / span 6;
-	}.md\:col-span-8{
-		grid-column: span 8 / span 8;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:mb-0{
@@ -2384,10 +2385,6 @@ video {
 		grid-column: span 4 / span 4;
 	}.lg\:col-span-9{
 		grid-column: span 9 / span 9;
-	}.lg\:col-span-3{
-		grid-column: span 3 / span 3;
-	}.lg\:col-span-8{
-		grid-column: span 8 / span 8;
 	}.lg\:flex{
 		display: flex;
 	}.lg\:w-auto{
