--- a/public/css/app.css
+++ b/public/css/app.css
@@ -821,6 +821,14 @@ video {
 	grid-column: span 4 / span 4;
 }.col-span-10{
 	grid-column: span 10 / span 10;
+}.col-span-3{
+	grid-column: span 3 / span 3;
+}.col-span-1{
+	grid-column: span 1 / span 1;
+}.col-span-8{
+	grid-column: span 8 / span 8;
+}.col-span-2{
+	grid-column: span 2 / span 2;
 }.m-2{
 	margin: 0.5rem;
 }.m-1{
@@ -907,6 +915,8 @@ video {
 	margin-top: 3rem;
 }.mb-1{
 	margin-bottom: 0.25rem;
+}.mb-12{
+	margin-bottom: 3rem;
 }.block{
 	display: block;
 }.inline-block{
