--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2341,6 +2341,8 @@ video {
 		grid-column: span 4 / span 4;
 	}.md\:col-span-6{
 		grid-column: span 6 / span 6;
+	}.md\:col-span-9{
+		grid-column: span 9 / span 9;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:mb-0{
