--- a/public/css/app.css
+++ b/public/css/app.css
@@ -851,6 +851,12 @@ video {
 }.mx-1{
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
+}.my-2{
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}.my-1{
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
 }.ml-3{
 	margin-left: 0.75rem;
 }.-ml-px{
@@ -2347,6 +2353,8 @@ video {
 		margin-top: 0px;
 	}.md\:mb-0{
 		margin-bottom: 0px;
+	}.md\:mb-10{
+		margin-bottom: 2.5rem;
 	}.md\:block{
 		display: block;
 	}.md\:flex{
@@ -2392,6 +2400,9 @@ video {
 	}.md\:text-sm{
 		font-size: 0.875rem;
 		line-height: 1.25rem;
+	}.md\:text-xl{
+		font-size: 1.25rem;
+		line-height: 1.75rem;
 	}
 }@media (min-width: 1024px){.lg\:col-span-4{
 		grid-column: span 4 / span 4;
