--- a/public/css/app.css
+++ b/public/css/app.css
@@ -819,8 +819,6 @@ video {
 	grid-column: span 12 / span 12;
 }.col-span-4{
 	grid-column: span 4 / span 4;
-}.col-span-8{
-	grid-column: span 8 / span 8;
 }.col-span-2{
 	grid-column: span 2 / span 2;
 }.col-span-10{
@@ -908,12 +906,12 @@ video {
 	margin-top: 0px;
 }.-mt-px{
 	margin-top: -1px;
+}.mt-12{
+	margin-top: 3rem;
 }.-mt-3{
 	margin-top: -0.75rem;
 }.mr-4{
 	margin-right: 1rem;
-}.mt-12{
-	margin-top: 3rem;
 }.mb-1{
 	margin-bottom: 0.25rem;
 }.block{
@@ -1121,6 +1119,8 @@ video {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}.break-all{
+	word-break: break-all;
 }.rounded-md{
 	border-radius: 0.375rem;
 }.rounded-lg{
@@ -1146,6 +1146,9 @@ video {
 }.rounded-t-lg{
 	border-top-left-radius: 0.5rem;
 	border-top-right-radius: 0.5rem;
+}.rounded-l-lg{
+	border-top-left-radius: 0.5rem;
+	border-bottom-left-radius: 0.5rem;
 }.border{
 	border-width: 1px;
 }.border-2{
@@ -1235,14 +1238,14 @@ video {
 }.bg-action{
 	--tw-bg-opacity: 1;
 	background-color: rgba(173, 46, 36, var(--tw-bg-opacity));
+}.bg-green{
+	--tw-bg-opacity: 1;
+	background-color: rgba(12, 174, 116, var(--tw-bg-opacity));
 }.bg-blue-500{
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }.bg-transparent{
 	background-color: transparent;
-}.bg-green{
-	--tw-bg-opacity: 1;
-	background-color: rgba(12, 174, 116, var(--tw-bg-opacity));
 }.bg-dark{
 	--tw-bg-opacity: 1;
 	background-color: rgba(61, 64, 91, var(--tw-bg-opacity));
@@ -1454,12 +1457,12 @@ video {
 }.text-gray-300{
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}.text-blue-900{
-	--tw-text-opacity: 1;
-	color: rgba(30, 58, 138, var(--tw-text-opacity));
 }.text-action{
 	--tw-text-opacity: 1;
 	color: rgba(173, 46, 36, var(--tw-text-opacity));
+}.text-blue-900{
+	--tw-text-opacity: 1;
+	color: rgba(30, 58, 138, var(--tw-text-opacity));
 }.text-primary{
 	--tw-text-opacity: 1;
 	color: rgba(20, 33, 61, var(--tw-text-opacity));
@@ -2093,6 +2096,9 @@ video {
 }.hover\:text-white:hover{
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}.hover\:text-action:hover{
+	--tw-text-opacity: 1;
+	color: rgba(173, 46, 36, var(--tw-text-opacity));
 }.hover\:shadow-lg:hover{
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -2208,6 +2214,10 @@ video {
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }.disabled\:opacity-25:disabled{
 	opacity: 0.25;
+}.group:hover .group-hover\:scale-150{
+	--tw-scale-x: 1.5;
+	--tw-scale-y: 1.5;
+	transform: var(--tw-transform);
 }.group:hover .group-hover\:bg-white{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -2345,16 +2355,22 @@ video {
 		grid-column: span 4 / span 4;
 	}.md\:col-span-3{
 		grid-column: span 3 / span 3;
-	}.md\:col-span-9{
-		grid-column: span 9 / span 9;
 	}.md\:col-span-6{
 		grid-column: span 6 / span 6;
+	}.md\:col-span-9{
+		grid-column: span 9 / span 9;
+	}.md\:col-span-5{
+		grid-column: span 5 / span 5;
+	}.md\:col-span-7{
+		grid-column: span 7 / span 7;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:mb-0{
 		margin-bottom: 0px;
 	}.md\:mb-10{
 		margin-bottom: 2.5rem;
+	}.md\:mr-4{
+		margin-right: 1rem;
 	}.md\:block{
 		display: block;
 	}.md\:flex{
@@ -2365,6 +2381,8 @@ video {
 		width: auto;
 	}.md\:w-48{
 		width: 12rem;
+	}.md\:w-full{
+		width: 100%;
 	}.md\:grid-cols-3{
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}.md\:grid-cols-2{
@@ -2394,6 +2412,9 @@ video {
 	}.md\:text-3xl{
 		font-size: 1.875rem;
 		line-height: 2.25rem;
+	}.md\:text-2xl{
+		font-size: 1.5rem;
+		line-height: 2rem;
 	}.md\:text-xl{
 		font-size: 1.25rem;
 		line-height: 1.75rem;
