--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1353,6 +1353,8 @@ video {
 	padding-bottom: 0.5rem;
 }.pr-3{
 	padding-right: 0.75rem;
+}.pt-3{
+	padding-top: 0.75rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -2363,6 +2365,8 @@ video {
 		grid-column: span 5 / span 5;
 	}.md\:col-span-7{
 		grid-column: span 7 / span 7;
+	}.md\:col-span-8{
+		grid-column: span 8 / span 8;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:mb-0{
