--- a/public/css/app.css
+++ b/public/css/app.css
@@ -998,6 +998,8 @@ video {
 	max-width: 640px;
 }.max-w-6xl{
 	max-width: 72rem;
+}.max-w-200{
+	max-width: 200px;
 }.max-w-400{
 	max-width: 400px;
 }.flex-1{
@@ -1353,8 +1355,6 @@ video {
 	padding-bottom: 0.5rem;
 }.pr-3{
 	padding-right: 0.75rem;
-}.pt-3{
-	padding-top: 0.75rem;
 }.text-left{
 	text-align: left;
 }.text-center{
@@ -2365,8 +2365,6 @@ video {
 		grid-column: span 5 / span 5;
 	}.md\:col-span-7{
 		grid-column: span 7 / span 7;
-	}.md\:col-span-8{
-		grid-column: span 8 / span 8;
 	}.md\:mt-0{
 		margin-top: 0px;
 	}.md\:mb-0{
