--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -85,6 +85,45 @@ nav {
   display: none;
 }
 
+.swal-overlay {
+  background: transparent;
+}
+
+.swal-overlay .swal-modal {
+  position: absolute;
+  bottom: 3em;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: unset;
+  background: #ad2e24;
+  border-radius: 5px 0 0 5px;
+  z-index: 100;
+}
+
+.swal-overlay .swal-modal .swal-title {
+  margin: 0;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 400;
+}
+
+.swal-overlay .swal-modal .swal-footer {
+  margin: 0;
+  padding: 0;
+}
+
+.swal-overlay .swal-modal .swal-footer .swal-button {
+  background: #14213d;
+}
+
 @media (max-width: 767px) {
   .web {
     display: none !important;
